--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.91",
     "@types/react": "^18.3.22",
     "@types/react-dom": "^18.3.7",
+    "axios": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.15.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.31",
